--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -2,20 +2,59 @@
 
 ---
 
-<div class="bg-slate-100 rounded-lg">
-    <div class="grid grid-cols-1 md:grid-cols-2">
-        <div class="bg-blue-400 w-60 h-60 rounded-full overflow-hidden mx-6 my-6">
-            <img src="https://cdn.pixabay.com/photo/2020/03/09/13/53/engineer-4915790_1280.jpg" alt="" class="w-full h-full object-cover">
-        </div>
-        <div class="flex flex-col justify-center mt-4 md:mt-0">
-            <span class="font-semibold text-gray-600 text-xl text-center">John Doe</span>
-            <span class="mt-2 md:mt-1 text-center text-gray-400">johndoe@example.com</span>
-            <span>Engineer System</span>
+<div class="bg-slate-100 rounded-lg shadow-lg container w-2/4">
+  <div class="grid grid-cols-1 md:grid-cols-2">
+    <div class="bg-blue-400 w-60 h-60 rounded-full overflow-hidden mx-14 my-10">
+      <img
+        src="https://cdn.pixabay.com/photo/2020/03/09/13/53/engineer-4915790_1280.jpg"
+        alt=""
+        class="w-full h-full object-cover"
+      />
+    </div>
+    <div class="flex flex-col justify-center mt-4">
+      <span class="font-bold text-gray-800 text-xl text-center">John Doe</span>
+      <span class="mt-2 text-center text-gray-400">
+        Massachusetts Institute of Technology
+      </span>
+      <span class="mt-1 text-center text-gray-400">Systems Engineer</span>
+      <span class="mt-1 text-center text-gray-400">Full stack developer</span>
+      <div class="flex items-center justify-center mt-1 text-gray-400">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+          class="w-5 h-5 mr-1"
+        >
+          <path
+            fill-rule="evenodd"
+            d="m9.69 18.933.003.001C9.89 19.02 10 19 10 19s.11.02.308-.066l.002-.001.006-.003.018-.008a5.741 5.741 0 0 0 .281-.14c.186-.096.446-.24.757-.433.62-.384 1.445-.966 2.274-1.765C15.302 14.988 17 12.493 17 9A7 7 0 1 0 3 9c0 3.492 1.698 5.988 3.355 7.584a13.731 13.731 0 0 0 2.273 1.765 11.842 11.842 0 0 0 .976.544l.062.029.018.008.006.003ZM10 11.25a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5Z"
+            clip-rule="evenodd"></path>
+        </svg>
+        <span>Silicon Valley, CA</span>
+      </div>
+      <span class="mt-3 text-center text-gray-400 text-sm"
+        >johndoe@example.com</span
+      >
+    </div>
+  </div>
+  <div class="rounded-b-lg grid grid-rows-3 mx-14">
+    <div class="shadow-sm grid grid-cols-2">
+        <span class="text-base font-semibold text-gray-800">
+            About me
+            <p class="mx-4 text-sm font-light text-gray-400">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis massa vel mi accumsan tempus. In efficitur tellus tristique, pulvinar augue in, sollicitudin diam.
+            </p>
+        </span>
+        <div class="flex justify-center items-center">
+            <button class="bg-red-500 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2 hover:bg-red-600 transition">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                    <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
+                </svg>
+                <span>View More</span>
+            </button>            
         </div>
     </div>
-    <div class="bg-green-400 rounded-b-lg">
-        footer
-    </div>
+    <div>b</div>
+    <div>c</div>
+  </div>
 </div>
-
- 
