--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -2,28 +2,27 @@
 
 ---
 
-<div class="bg-slate-100 rounded-lg shadow-lg container w-2/4">
+<div class="bg-slate-100 rounded-lg shadow-lg w-3/6 my-8">
   <div class="grid grid-cols-1 md:grid-cols-2">
-    <div class="bg-blue-400 w-60 h-60 rounded-full overflow-hidden mx-14 my-10">
+    <div class="bg-blue-400 w-40 h-40 rounded-full overflow-hidden mx-32 my-10">
       <img
-        src="https://cdn.pixabay.com/photo/2020/03/09/13/53/engineer-4915790_1280.jpg"
+        src="https://images.pexels.com/photos/1300402/pexels-photo-1300402.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         alt=""
-        class="w-full h-full object-cover"
+        class="w-full h-full object-hidden"
       />
     </div>
     <div class="flex flex-col justify-center mt-4">
       <span class="font-bold text-gray-800 text-xl text-center">John Doe</span>
-      <span class="mt-2 text-center text-gray-400">
+      <span class="mt-2 text-center text-gray-500">
         Massachusetts Institute of Technology
       </span>
-      <span class="mt-1 text-center text-gray-400">Systems Engineer</span>
-      <span class="mt-1 text-center text-gray-400">Full stack developer</span>
+      <span class="mt-1 text-center text-gray-400">Systems Engineer / Full stack developer</span>
       <div class="flex items-center justify-center mt-1 text-gray-400">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 20 20"
           fill="currentColor"
-          class="w-5 h-5 mr-1"
+          class="w-5 h-5 mr-1 text-red-600"
         >
           <path
             fill-rule="evenodd"
@@ -32,17 +31,33 @@
         </svg>
         <span>Silicon Valley, CA</span>
       </div>
-      <span class="mt-3 text-center text-gray-400 text-sm"
+      <span class="mt-3 text-center text-blue-400 text-sm"
         >johndoe@example.com</span
       >
     </div>
   </div>
-  <div class="rounded-b-lg grid grid-rows-3 mx-14">
+  <div class="rounded-b-lg grid grid-rows-3 mx-16">
     <div class="shadow-sm grid grid-cols-2">
         <span class="text-base font-semibold text-gray-800">
             About me
             <p class="mx-4 text-sm font-light text-gray-400">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis massa vel mi accumsan tempus. In efficitur tellus tristique, pulvinar augue in, sollicitudin diam.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis massa vel mi accumsan tempus.
+            </p>
+        </span>
+        <div class="flex justify-center items-center mx-auto">
+            <button class="bg-red-500 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2 hover:bg-red-600 transition">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                    <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
+                </svg>
+                <span>View More</span>
+            </button>            
+        </div>
+    </div>
+    <div class="shadow-sm grid grid-cols-2 mt-4">
+        <span class="text-base font-semibold text-gray-800">
+            Skills
+            <p class="mx-4 text-sm font-light text-gray-400">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis massa vel mi accumsan tempus. 
             </p>
         </span>
         <div class="flex justify-center items-center">
@@ -54,7 +69,21 @@
             </button>            
         </div>
     </div>
-    <div>b</div>
-    <div>c</div>
+    <div class="shadow-sm grid grid-cols-2 mt-4 mb-4">
+        <span class="text-base font-semibold text-gray-800">
+            Studies
+            <p class="mx-4 text-sm font-light text-gray-400">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis massa vel mi accumsan tempus.
+            </p>
+        </span>
+        <div class="flex justify-center items-center">
+            <button class="bg-red-500 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2 hover:bg-red-600 transition">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                    <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
+                </svg>
+                <span>View More</span>
+            </button>            
+        </div>
+    </div>
   </div>
 </div>
