Ajustes en la imagen y el ancho del contenedor

--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -4,14 +4,14 @@
 
 <div class="bg-slate-100 rounded-lg shadow-lg w-3/6 my-8">
   <div class="grid grid-cols-1 md:grid-cols-2">
-    <div class="bg-blue-400 w-40 h-40 rounded-full overflow-hidden mx-32 my-10">
+    <div class="bg-blue-400 w-44 h-44 rounded-full overflow-hidden mx-24 my-8">
       <img
-        src="https://images.pexels.com/photos/1300402/pexels-photo-1300402.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        src="https://images.pexels.com/photos/91227/pexels-photo-91227.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         alt=""
-        class="w-full h-full object-hidden"
+        class="w-full h-full object-hidden transition-shadow"
       />
     </div>
-    <div class="flex flex-col justify-center mt-4">
+    <div class="flex flex-col justify-center mt-4 mr-16">
       <span class="font-bold text-gray-800 text-xl text-center">John Doe</span>
       <span class="mt-2 text-center text-gray-500">
         Massachusetts Institute of Technology
@@ -36,7 +36,7 @@
       >
     </div>
   </div>
-  <div class="rounded-b-lg grid grid-rows-3 mx-16">
+  <div class="rounded-b-lg grid grid-rows-3 ml-16">
     <div class="shadow-sm grid grid-cols-2">
         <span class="text-base font-semibold text-gray-800">
             About me
