Cambio en los botones

--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -42,7 +42,7 @@
             </p>
         </span>
         <div class="flex justify-center items-center">
-            <button class="bg-red-500 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2 hover:bg-red-600 transition">
+            <button class="transition ease-in-out delay-150 bg-red-500 hover:-translate-y-1 hover:scale-110 hover:bg-red-600 duration-300 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
                     <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
                 </svg>
@@ -58,7 +58,7 @@
             </p>
         </span>
         <div class="flex justify-center items-center">
-            <button class="bg-red-500 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2 hover:bg-red-600 transition">
+            <button class="transition ease-in-out delay-150 bg-red-500 hover:-translate-y-1 hover:scale-110 hover:bg-red-600 duration-300 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
                     <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
                 </svg>
@@ -74,7 +74,7 @@
             </p>
         </span>
         <div class="flex justify-center items-center">
-            <button class="bg-red-500 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2 hover:bg-red-600 transition">
+            <button class="transition ease-in-out delay-150 bg-red-500 hover:-translate-y-1 hover:scale-110 hover:bg-red-600 duration-300 w-auto h-10 px-4 py-1 rounded-lg text-white font-semibold flex items-center space-x-2">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
                     <path d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
                 </svg>
