Ajustes en el ancho

--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -15,7 +15,7 @@
       <span class="mt-2 text-center text-gray-500">
         Massachusetts Institute of Technology
       </span>
-      <span class="mt-1 text-center text-gray-400">Systems Engineer / Full stack developer</span>
+      <span class="mt-1 text-center text-gray-400">Systems Eng / Frontend Dev</span>
       <div class="flex items-center justify-center mt-1 text-gray-400">
         <svg
           xmlns="http://www.w3.org/2000/svg"
