Altura de la página

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import NewCard from '../components/NewCard.astro';
 ---
 
 <Layout title="Welcome">
-	<div class="flex justify-center items-center bg-slate-200">
+	<div class="flex justify-center items-center h-screen bg-slate-200">
 		<NewCard/>
 	</div>
 </Layout>
