--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<div class="bg-slate-100 rounded-lg shadow-lg w-full md:w-3/6 my-8 mx-auto">
+<div class="bg-slate-100 rounded-lg shadow-lg w-full md:w-3/6 my-8 mx-16">
   <div class="grid grid-cols-1 md:grid-cols-2">
     <div class="bg-blue-400 w-44 h-44 rounded-full overflow-hidden mx-auto my-8">
       <img
